objects/vlocity_cmt__DocumentTemplateElement__c.object
<CustomObject>
    <description>Stores the original DOCX template uploaded by the user and the DOCX template that results from replacing clause insertion tokens with clause content.</description>
    <fields>
        <fullName>vlocity_cmt__ContentVersionId__c</fullName>
        <description>Lookup to  Salesforce object - Content Version</description>
        <externalId>true</externalId>
        <label>ContentVersionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentModifiedDate__c</fullName>
        <label>Document Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentSize__c</fullName>
        <label>Document Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTemplateId__c</fullName>
        <label>Document Template</label>
        <referenceTo>vlocity_cmt__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Document Template Elements</relationshipLabel>
        <relationshipName>DocumentTemplateElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentTitle__c</fullName>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ElementStage__c</fullName>
        <label>Element Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Replaced Clause Content</fullName>
                </value>
                <value>
                    <fullName>Formatted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Template Element</label>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Template Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>